--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "uuid": "^9.0.0",
     "vue": "^3.2.37",
     "vue-good-table-next": "^0.2.1",
+    "vue-simple-context-menu": "^4.0.4",
     "vue-universal-modal": "^1.1.4"
   },
   "devDependencies": {
